[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/DialogEditor/DialogGraphEditor/EditorGraphEdit.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/DialogEditor/DialogGraphEditor/DialogGraphEditor.gd" type="Script" id=2]

[node name="DialogGraphEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="AddNodeMenu" type="MenuButton" parent="VBoxContainer/ToolBar"]
margin_right = 82.0
margin_bottom = 20.0
text = "Add Nodes"
items = [ "Start Dialog", null, 0, false, false, 0, 0, null, "", false ]

[node name="GraphEdit" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 596.0
scroll_offset = Vector2( -300, -100 )

[node name="Debug" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 600.0
margin_right = 1024.0
margin_bottom = 600.0
